2005-09-09  Richard Guenther  <rguenther@suse.de>

PR c++/23624
	* fold-const.c (fold_ternary): Check truth_value_p before
	calling invert_truthvalue.

	* g++.dg/tree-ssa/pr23624.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@104083 138bc75d-0d04-0410-961f-82ee72b054a4